welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: ')' expected but ',' found.
	if (talking== true,hour>20){return true}
                          ^parotTrouble:5: error: illegal start of simple expression
}
^